--- a/src/css/index.css
+++ b/src/css/index.css
@@ -289,6 +289,15 @@ h1 {
   font-weight: bold;
   line-height: 1.2;
 }
+.gallery {
+  display: flex;
+  flex-direction: row;
+  margin-right: -10px;
+}
+.gallery-item img {
+  display: block;
+  padding-right: 10px;
+}
 .list-group {
   list-style: none;
   margin: 0;
