--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,7 +7,6 @@ body {
 }
 * {
   box-sizing: border-box;
-  transition: all 400ms cubic-bezier(0.2, 0.965, 0, 1.005);
 }
 body {
   display: flex;
@@ -26,13 +25,14 @@ body::before {
   position: fixed;
   background-position: 75%;
   z-index: -1;
+  transition: background 1s;
 }
 a {
   text-decoration: none;
   color: inherit;
 }
 small {
-  font-size: 1em;
+  font-size: 0.9em;
 }
 header {
   flex: 0 1 25vh;
@@ -43,7 +43,7 @@ header div {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(255, 255, 255, 0.87);
+  background: hsla(0, 0%, 100%, 0.87);
   padding: 1em;
   width: 100%;
 }
@@ -87,7 +87,7 @@ main {
   flex-direction: column;
 }
 .icon-menu {
-  content: url("https://icons.simplesvg.com/fa-bars.svg?color=%23555&height=24&inline=true");
+  content: url("https://icons.simplesvg.com/fa-bars.svg?color=%23331b01&height=24&inline=true");
 }
 .icon-right {
   content: url("https://icons.simplesvg.com/fa-chevron-right.svg?color=%23f9f9f9&height=24&inline=true");
@@ -102,7 +102,7 @@ main {
   margin: 0.4em;
 }
 .icon-close {
-  content: url("https://icons.simplesvg.com/fa-close.svg?color=%23555&height=24&inline=true");
+  content: url("https://icons.simplesvg.com/fa-close.svg?color=%23f9f9f9&height=24&inline=true");
   vertical-align: -0.143em;
 }
 .forecast-grid {
@@ -114,7 +114,7 @@ main {
   align-items: stretch;
   border-top: 5px solid white;
   border-bottom: 5px solid white;
-  text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.4);
+  text-shadow: 1px 1px 8px hsla(0, 0%, 0%, 0.4);
 }
 .forecast__prev,
 .forecast__next {
@@ -129,7 +129,6 @@ main {
 .forecast__link--prev,
 .forecast__link--next {
   text-decoration: none;
-  color: #f9f9f9;
   height: 100%;
   display: flex;
   align-items: center;
@@ -137,7 +136,6 @@ main {
   flex: 100%;
 }
 .forecast-details {
-  color: #f9f9f9;
   text-align: center;
   margin: 2em auto;
   text-transform: uppercase;
@@ -159,7 +157,7 @@ main {
 .forecast-details-panel,
 .content-panel {
   opacity: 0;
-  color: rgba(0, 0, 0, 0.87);
+  color: hsla(0, 0%, 0%, 0.87);
   max-height: 0;
   min-width: 0;
   position: absolute;
@@ -215,6 +213,7 @@ main {
   display: none;
 }
 .forecast-details__link {
+  background: hsla(31, 96%, 10%, 0.6);
   color: #f9f9f9;
   text-decoration: none;
   letter-spacing: 0.1em;
@@ -222,10 +221,9 @@ main {
   border: 5px solid white;
   padding: 1em;
   display: block;
-  text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.85);
-  box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.4);
+  text-shadow: 1px 1px 8px hsla(0, 0%, 0%, 0.85);
+  box-shadow: 1px 1px 8px 0px hsla(0, 0%, 0%, 0.4);
   line-height: 1;
-  background: rgba(0, 0, 0, 0.6);
   text-transform: uppercase;
 }
 .forecast-details__panel--active > .forecast-details__link {
@@ -274,18 +272,14 @@ main {
   justify-content: space-around;
   text-align: center;
   flex-direction: column;
-  color: #f9f9f9;
   padding: 16px;
 }
 .swiper-slide p {
   margin: 0;
-  font-style: italic;
   letter-spacing: 0.05em;
 }
 h1 {
-  color: #f9f9f9;
   font-size: 1.8em;
-  text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.4);
   font-weight: bold;
   line-height: 1.2;
 }
@@ -294,9 +288,11 @@ h1 {
   flex-direction: row;
   margin-right: -10px;
 }
+.gallery-item {
+  margin-right: 10px;
+}
 .gallery-item img {
   display: block;
-  padding-right: 10px;
 }
 .list-group {
   list-style: none;
@@ -308,7 +304,7 @@ h1 {
 }
 .list-group-item {
   margin: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.12);
+  border-top: 1px solid hsla(0, 0%, 0%, 0.12);
   padding: 8px 32px;
   line-height: 1.2;
 }
@@ -330,14 +326,14 @@ h1 {
   justify-content: space-between;
   transform: scale(0);
   transform-origin: 6vw 12vh;
-  transition: all 500ms cubic-bezier(0.2, 0.965, 0, 1.005);
-  background: rgba(0, 0, 0, 0.9);
+  transition: transform 500ms cubic-bezier(0.2, 0.965, 0, 1.005);
+  background: hsl(198, 100%, 24%);
 }
 .drawer--active {
   opacity: 1;
   z-index: 10;
   transform: scale(1);
-  transition: all 700ms cubic-bezier(0.2, 0.965, 0, 1.005);
+  transition: transform 700ms cubic-bezier(0.2, 0.965, 0, 1.005);
 }
 .drawer__close-btn {
   display: block;
@@ -379,22 +375,19 @@ h1 {
   text-decoration: none;
   padding: 1em;
   text-align: center;
-  text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.4);
-  box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, 0.4);
+  text-shadow: 1px 1px 8px hsla(0, 0%, 0%, 0.4);
+  box-shadow: 1px 1px 8px 0 hsla(0, 0%, 0%, 0.4);
   letter-spacing: 0.1em;
-  background: rgba(0, 0, 0, 0.15);
+  background: hsla(0, 0%, 0%, 0.15);
 }
 .drawer footer {
-  background: rgba(0, 0, 0, 0.25);
+  background: hsla(0, 0%, 0%, 0.25);
   text-align: center;
   flex: 1 1 25vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
   padding: 0.5px;
-}
-.drawer footer small {
-  color: rgba(255, 255, 255, 0.5);
 }
 .card {
   padding: 16px 32px;
@@ -403,20 +396,20 @@ h1 {
   margin: -16px -32px 0;
 }
 .card article {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.31);
+  border-bottom: 1px solid hsla(0, 0%, 0%, 0.31);
   margin: 0 -32px;
   padding: 16px 32px;
 }
 .card article > b:first-child {
   float: right;
-  color: rgba(0, 0, 0, 0.66);
+  color: hsla(0, 0%, 0%, 0.66);
 }
 .card article h3 {
   margin-top: 0;
 }
 .content-panel .list-group-item {
   padding: 16px 32px;
-  border: 1px solid rgba(0, 0, 0, 0.12);
+  border: 1px solid hsla(0, 0%, 0%, 0.12);
   margin-top: -1px;
   background: #f9f9f9;
 }
@@ -432,7 +425,7 @@ h1 {
     -2px 0 0 #f9f9f9;
   background-position: 0 1em;
   background-size: 0.125em 0.125em;
-  background-image: linear-gradient(#f9f9f9 50%, rgba(0, 0, 0, 0.31) 50%);
+  background-image: linear-gradient(#f9f9f9 50%, hsla(0, 0%, 0%, 0.31) 50%);
   background-repeat: repeat-x;
 }
 .content-panel a::selection {
@@ -443,7 +436,7 @@ h1 {
 }
 .sm {
   font-size: 0.8rem;
-  color: rgba(0, 0, 0, 0.66);
+  color: hsla(0, 0%, 0%, 0.66);
 }
 .hidden {
   opacity: 0;
@@ -453,10 +446,11 @@ figure {
 }
 figcaption {
   font-style: italic;
-  color: rgba(0, 0, 0, 0.66);
+  color: hsla(0, 0%, 0%, 0.66);
 }
 .forecast-grid {
-  background: rgba(0, 0, 0, 0.6);
+  background: hsla(0, 0%, 0%, 0.6);
+  color: #f9f9f9;
 }
 .forecast--good0::before {
   background-image: url("/img/good0.jpg");
@@ -470,6 +464,15 @@ figcaption {
 .forecast--good .visible--good {
   display: block;
 }
+.forecast--good .forecast-grid {
+  background-color: hsla(143, 66%, 22%, 0.5);
+}
+.forecast--good .forecast__next,
+.forecast--good .forecast__prev,
+.forecast--good h2 {
+  background: hsla(143, 66%, 22%, 1);
+  color: #f9f9f9;
+}
 .forecast--unhealthy0::before {
   background-image: url("/img/unhealthy0.jpg");
 }
@@ -481,6 +484,15 @@ figcaption {
 }
 .forecast--unhealthy .visible--unhealthy {
   display: block;
+}
+.forecast--unhealthy .forecast-grid {
+  background: hsla(0, 72%, 36%, 0.5);
+}
+.forecast--unhealthy .forecast__next,
+.forecast--unhealthy .forecast__prev,
+.forecast--unhealthy h2 {
+  background: hsla(0, 72%, 36%, 1);
+  color: #f9f9f9;
 }
 .forecast--moderate0::before {
   background-image: url("/img/moderate0.jpg");
@@ -494,6 +506,26 @@ figcaption {
 .forecast--moderate .visible--moderate {
   display: block;
 }
+.forecast--moderate .forecast-grid {
+  background: hsla(53, 100%, 48%, 0.6);
+  color: #331b01;
+  text-shadow: 2px 2px 5px hsla(53, 100%, 88%, 0.6),
+    -2px -2px 5px hsla(53, 100%, 88%, 0.6),
+    2px -2px 5px hsla(53, 100%, 88%, 0.6), -2px 2px 5px hsla(53, 100%, 88%, 0.6);
+}
+.forecast--moderate .forecast__next,
+.forecast--moderate .forecast__prev,
+.forecast--moderate h2 {
+  background: hsl(53, 100%, 48%);
+}
+.forecast--moderate .icon-right,
+.forecast--sensitive .icon-right {
+  content: url(https://icons.simplesvg.com/fa-chevron-right.svg?color=%23331b01&height=24&inline=true);
+}
+.forecast--moderate .icon-left,
+.forecast--sensitive .icon-left {
+  content: url(https://icons.simplesvg.com/fa-chevron-left.svg?color=%23331b01&height=24&inline=true);
+}
 .forecast--sensitive0::before {
   background-image: url("/img/sensitive0.jpg");
 }
@@ -505,6 +537,18 @@ figcaption {
 }
 .forecast--sensitive .visible--sensitive {
   display: block;
+}
+.forecast--sensitive .forecast-grid {
+  background: hsla(26, 100%, 64%, 0.6);
+  text-shadow: 2px 2px 5px hsla(26, 100%, 88%, 0.6),
+    -2px -2px 5px hsla(26, 100%, 88%, 0.6),
+    2px -2px 5px hsla(26, 100%, 88%, 0.6), -2px 2px 5px hsla(26, 100%, 88%, 0.6);
+  color: #331b01;
+}
+.forecast--sensitive .forecast__next,
+.forecast--sensitive .forecast__prev,
+.forecast--sensitive h2 {
+  background: hsl(26, 100%, 64%);
 }
 .forecast--unavailable::before {
   background: #888;
@@ -529,7 +573,7 @@ footer {
     background: linear-gradient(
       to right,
       #f9f9f9 50%,
-      rgba(255, 255, 255, 0) 75%
+      transparent 75%
     );
   }
   header section {
@@ -560,7 +604,7 @@ footer {
     height: 23.25rem;
   }
   .drawer-list-item {
-    background: rgba(0, 0, 0, 0.6);
+    background: hsla(0, 0%, 0%, 0.6);
   }
   .drawer footer,
   .demo-menu,
@@ -579,7 +623,7 @@ footer {
   .forecast-grid {
     border-left: 5px solid white;
     border-right: 5px solid white;
-    box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, 0.66);
+    box-shadow: 1px 1px 8px 0 hsla(0, 0%, 0%, 0.66);
     flex: 1 0 calc(16em + 40px);
   }
   .forecast-grid small {
@@ -614,7 +658,7 @@ footer {
   }
   .forecast-details-panel,
   .card {
-    box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, 0.85);
+    box-shadow: 1px 1px 8px 0 hsla(0, 0%, 0%, 0.85);
   }
   .forecast-details__panel--active > .forecast-details-panel,
   .content-panel--active {
@@ -626,9 +670,9 @@ footer {
   }
   footer {
     margin-top: auto;
-    background: rgba(0, 0, 0, 0.66);
+    background: hsla(0, 0%, 0%, 0.66);
     color: #f9f9f9;
-    text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.85);
+    text-shadow: 1px 1px 8px hsla(0, 0%, 0%, 0.85);
     display: block;
   }
   footer div {
