Fix link styles and update deps

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -28,8 +28,8 @@ body::before {
   transition: background 1s;
 }
 a {
-  text-decoration: none;
   color: inherit;
+  text-decoration: underline rgba(0,0,0,.24);
 }
 small {
   font-size: 0.9em;
