--- a/partials/GreenCommute/Rules/index.html
+++ b/partials/GreenCommute/Rules/index.html
@@ -37,7 +37,7 @@
     will be randomly selected from all entrants, and will be notified by June
     21, 2019. The winners’ names will be posted on the Air Quality Partnership
     webpage at
-    <a href="https://www.airqualitypartnership.org/GreenCommute">
+    <a href="/GreenCommute/">
       www.airqualitypartnership.org/GreenCommute
     </a>
   </p>
