Move Spanish Resources to new page

--- a/partials/404/index.html
+++ b/partials/404/index.html
@@ -9,10 +9,13 @@
       <a href="/About/">About</a>
     </li>
     <li class="list-group-item">
-      <a href="/News/">News</a>
+      <a href="/CleanDriving/">Clean Driving Tips</a>
     </li>
     <li class="list-group-item">
       <a href="/Resources/">Resources</a>
+    </li>
+    <li class="list-group-item">
+      <a href="/Recursos/">Spanish Resources</a>
     </li>
     <li class="list-group-item">
       <a
