update Spanish Resources

--- a/partials/Recursos/index.html
+++ b/partials/Recursos/index.html
@@ -1,7 +1,7 @@
 <div class="card" lang="es">
   <h2>LOS RECURSOS</h2>
 
-  <p>AQP publica materiales para la communidad y membros de el publico. Por favor descarga y compartelos.</p>
+  <p>AQP publica materiales para la comunidad y miembros del publico. Por favor descarga y compartelos.</p>
 
   <ul class="list-group">
     <li class="list-group-item">
