Update spanish resources link

--- a/partials/404/index.html
+++ b/partials/404/index.html
@@ -15,7 +15,7 @@
       <a href="/Resources/">Resources</a>
     </li>
     <li class="list-group-item">
-      <a href="/Recursos/">Spanish Resources</a>
+      <a href="/Recursos/" lang="es">Los Recursos</a>
     </li>
     <li class="list-group-item">
       <a
