Add video resources

--- a/partials/Recursos/index.html
+++ b/partials/Recursos/index.html
@@ -1,7 +1,10 @@
 <div class="card" lang="es">
   <h2>LOS RECURSOS</h2>
 
-  <p>AQP publica materiales para la comunidad y miembros del publico. Por favor descarga y compartelos.</p>
+  <p>
+    AQP publica materiales para la comunidad y miembros del publico. Por favor
+    descarga y compartelos.
+  </p>
 
   <ul class="list-group">
     <li class="list-group-item">
@@ -28,6 +31,23 @@
         >EPA - ¿Por qué Coco es de color naranja?</a
       >
       <span class="sm">[1.4 MB pdf]</span>
+    </li>
+  </ul>
+
+  <h3>Videos</h3>
+  <ul class="list-group">
+    <li class="list-group-item">
+      <a
+        lang="en"
+        target="_blank"
+        href="https://www.youtube.com/watch?v=nu6iPX1UoKc"
+        >Get Back on Transit</a
+      >
+    </li>
+    <li class="list-group-item">
+      <a target="_blank" href="https://www.youtube.com/watch?v=8gBX5GwxFsY"
+        >¿Por qué Coco es de color naranja?</a
+      >
     </li>
   </ul>
 </div>
