--- a/partials/Resources/index.html
+++ b/partials/Resources/index.html
@@ -3,6 +3,20 @@
 
   <p>The AQP publishes materials for public use. Please download and share!</p>
 
+  <h3>Videos</h3>
+  <ul class="list-group">
+    <li class="list-group-item">
+      <a target="_blank" href="https://www.youtube.com/watch?v=nu6iPX1UoKc"
+        >Get Back on Transit</a
+      >
+    </li>
+    <li class="list-group-item">
+      <a target="_blank" href="https://www.youtube.com/watch?v=8gBX5GwxFsY"
+        >"Why is Coco Orange?" (a book reading in Spanish)</a
+      >
+    </li>
+  </ul>
+
   <h3>Brochures &amp; Handouts</h3>
   <ul class="list-group">
     <li class="list-group-item">
