--- a/src/css/index.css
+++ b/src/css/index.css
@@ -382,7 +382,7 @@ h1 {
   flex: 0 1 calc(20.75em + 40px);
   /* min-height: calc(13em + 40px);
   height: 100%; */
-  min-height: 100%;
+  /* min-height: 100%; */
 }
 .drawer-list-item {
   color: #f9f9f9;
@@ -637,11 +637,11 @@ footer {
   height: min-content;
   width: min-content;
 }
-#desktop-drawer {
+/* #desktop-drawer {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
+} */
 @media (min-width: 660px) {
   .left,
   .right {
